Bug 329158 - infosummary uses compiletime kde version
Summary: infosummary uses compiletime kde version
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: InfoSummary (other bugs)
Version First Reported In: 4.12.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Hubner
URL: https://www.kubuntuforums.net/showthr...
Keywords: junior-jobs
: 333593 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-23 14:44 UTC by Harald Sitter
Modified: 2014-08-29 16:09 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2013-12-23 14:44:13 UTC
in the infosummary kcm there is:
osWidget->setLabelTwo(QString(KDE_VERSION_STRING));

which picks up the kde version at compile time which is now bogus since workspace does not need to be built when kdelibs changes

for example on kubuntu workspace was last built against kdelibs 4.11.97 which is the version kinfocenter reports until a new build is done (if at all...) [1]

the summary kcm should instead use the runtime function KDE::versionString() to get the kdelibs version at runtime, thus reflecting more accurately what version is being used. otherwise it gets paritcularly confusing since the default 'about kde' option in all applications' help menu potentially reports a different version.

[1] https://www.kubuntuforums.net/showthread.php?64373-Alpha-1-Installed-after-using-the-Try-Kubuntu!!&p=342024&viewfull=1#post342024



Reproducible: Always
Comment 1 sakshi.april5 2014-03-25 12:12:40 UTC
Hello,

I am a beginner would like to work on this bug if it is still available.
Comment 2 Christoph Feck 2014-04-19 15:09:15 UTC
*** Bug 333593 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2014-04-20 17:04:07 UTC
Yes, it is still available. If you have a patch, please create a review request at https://git.reviewboard.kde.org/

If you need help, ask on the kde-devel mailing list or on other KDE developer support channels.
Comment 4 kdebugs 2014-06-19 02:15:47 UTC
(In reply to comment #3)
> Yes, it is still available. If you have a patch, please create a review
> request at https://git.reviewboard.kde.org/

Is it necessary to post here after adding review request?  If so:
https://git.reviewboard.kde.org/r/118823/

(No wonder sakshi never got around to doing this - lots of hoops to jump through, and the documentation is on all different servers and half of it is out of date.)
Comment 5 Christoph Feck 2014-07-22 01:50:38 UTC
Git commit 73eb545cc13c6adff77f26203fe6352a3086f8a7 by Christoph Feck.
Committed on 22/07/2014 at 01:45.
Pushed by cfeck into branch 'KDE/4.11'.

Use runtime version string

Adapted patch from Taylor Brandon <kdebugs@toeai.com>
No forward port, because there is no KDE SC for Plasma 5.
REVIEW: 118823

M  +1    -1    kinfocenter/Modules/infosummary/infosum.cpp

http://commits.kde.org/kde-workspace/73eb545cc13c6adff77f26203fe6352a3086f8a7
Comment 6 kdebugs 2014-08-29 15:16:44 UTC
I guess I don't understand how these updates get pushed to the various distros.  This says "Fixed In: 4.11.12"; I'm on 4.13.3, and I see that the behavior hasn't changed (kinfocenter still says 4.13.2).  I 'apt-get source' downloaded the code and it doesn't reflect the change.
Comment 7 Christoph Feck 2014-08-29 16:03:24 UTC
KDE Workspaces 4.11.12 will ship mid-September, see https://techbase.kde.org/Schedules/KDE4/4.11_Release_Schedule
Comment 8 kdebugs 2014-08-29 16:09:22 UTC
Oh, I see.  I didn't realize Workspace version didn't track with SC.  Thanks!