Use runtime version string

Adapted patch from Taylor Brandon <kdebugs@toeai.com>
No forward port, because there is no KDE SC for Plasma 5.

BUG: 329158
REVIEW: 118823